--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,24 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.free.launcher.clock.MainActivity">
+    tools:context="com.free.launcher.clock.MainActivity"
+    android:background="#454545"
+    android:gravity="center">
 
-    <TextView
+    <FrameLayout
+        android:layout_width="244dp"
+        android:layout_height="141dp"
+        android:background="@android:color/white"
+        android:id="@+id/clockViewGroup" />
+
+    <Button
+        android:text="Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_below="@+id/clockViewGroup"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="157dp"
+        android:layout_marginStart="157dp"
+        android:id="@+id/button" />
 </RelativeLayout>
